@@ -1,4 +1,11 @@
 === 0.4 ===
+2011-07-15  Aki Sasaki  <aki@mozilla.com>
+* mozharness/scripts/mozmill_updates.py:
+    Added file.
+
+* mozharness/base/config.py (_create_config_parser):
+    Set default work_dir to 'build' instead of 'work_dir'
+
 2011-07-12  Aki Sasaki  <aki@mozilla.com>
 * mozharness/base/config.py (parse_config_file):
     Explicitly close fh when using .json config files
